<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Who\'s In?</string>
    <string name="facebook_app_id">644597849040245</string>

    <!-- Drawer Menu Items -->
    <string name="fields_item">Fields</string>
    <string name="members_item">Members</string>
    <string name="option_c_item">Matches</string>
    <string name="setting_item">Settings</string>
    <string name="join_code_item">Invitation code</string>
    <string name="log_out_item">Logout</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="group_name">Group Name</string>
    <string name="dont_have_code">I don\'t have a code</string>
    <string name="group_code">Group Code</string>
    <string name="group_code_required">Group code is required!</string>
    <string name="group_name_required">Group name is required!</string>
    <string name="members">Members</string>
    <string name="accepted_members">Accepted</string>
    <string name="pending_members">Pending</string>
    <string name="administrator">Administrator</string>
    <string name="participant">Participant</string>
    <string name="soccer_field_name">Soccer field name</string>
    <string name="soccer_field_phone">Phone</string>
    <string name="soccer_field_capacity">Capacity</string>
    <string name="soccer_field_price">Price</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_soccer_field">Create Soccer Field</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="all_permissions_required">All permissions are required</string>
    <string name="some_permissions_disabled">Go to settings and enable the required permissions for this application</string>
    <string name="improve_map_experience">To improve your experience, enable the GPS on your phone</string>
    <string name="invitation_code_legend">Use this code to invite more users to join this group</string>
    <string name="approve">Approve</string>
    <string name="remove">Remove</string>
    <string name="member_confirmation_title">%1$s member</string>
    <string name="member_confirmation">Are you sure you want to %1$s the member request from %2$s?</string>
    <string name="change_group">Change Group</string>
    <string name="new_match">New match</string>
    <string name="show_match">Show Soccer Match</string>
    <string name="confirmed_participants">Confirmed participants</string>
    <string name="confirm_attendance">Confirm attendance</string>
    <string name="cancel_attendance">Cancel attendance</string>
    <string name="players">%1$d Players</string>
    <string name="place_format">Place: %1$s</string>
    <string name="date_format">Date: %1$s</string>
    <string name="time_format">Time: %1$s</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="create_match">Create soccer match</string>
    <string name="select_soccer_field">Select soccer field</string>
    <string name="participants_number">Number of participants</string>
    <string name="match_details">Match details</string>
    <string name="soccer_field_details">Soccer field details</string>
</resources>
