<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.soccer.whosin.matches.ShowMatchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_room"
                        android:contentDescription="@null"/>

                    <Spinner
                        android:id="@+id/new.match.fields"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/new.match.field.details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:baselineAligned="false"
                    android:visibility="gone">
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/soccer_field_details"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/light_gray"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="@dimen/text_drawable_space_between"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin">

                            <TextView
                                android:id="@+id/new.match.field.price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:drawablePadding="@dimen/text_drawable_space_between"
                                android:drawableStart="@drawable/ic_editor_attach_money"
                                android:drawableLeft="@drawable/ic_editor_attach_money"
                                android:layout_marginBottom="@dimen/text_drawable_space_between"
                                android:textSize="17sp" />

                            <TextView
                                android:id="@+id/new.match.field.capacity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:drawablePadding="@dimen/text_drawable_space_between"
                                android:drawableStart="@drawable/ic_social_group"
                                android:drawableLeft="@drawable/ic_social_group"
                                android:layout_marginBottom="@dimen/text_drawable_space_between"
                                android:textSize="17sp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/new.match.field.phone.number"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:textSize="17sp" />

                                <ImageView
                                    android:id="@+id/new.match.field.phone.call"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:padding="5dp"
                                    android:contentDescription="@null"
                                    android:src="@drawable/ic_communication_call"/>

                            </RelativeLayout>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/new.match.date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:hint="@string/date" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/new.match.time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:hint="@string/time" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/new.match.players.limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/participants_number" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/new.match.create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_button"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/text_drawable_space_between"
                    android:textColor="@android:color/white"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/create_match"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/new.match.loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.60"
                android:background="@android:color/black"
                android:contentDescription="@null"/>

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:indicatorName="BallTrianglePathIndicator"
                app:indicatorColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
